--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -34,7 +34,7 @@ login_port: 6900
 // Character Server IP
 // The IP address which clients will use to connect.
 // Set this to what your server's public IP address is.
-//char_ip: 127.0.0.1
+char_ip: 47.74.249.164
 
 // Character Server Port
 char_port: 6121
@@ -112,8 +112,12 @@ save_log: yes
 // Max number of start points is MAX_STARTPOINT in char.h (default 5)
 // Location is randomly picked on character creation.
 // NOTE: For Doram, this requires client 20151001 or newer.
-start_point: iz_int,18,26:iz_int01,18,26:iz_int02,18,26:iz_int03,18,26:iz_int04,18,26
-start_point_pre: new_1-1,53,111:new_2-1,53,111:new_3-1,53,111:new_4-1,53,111:new_5-1,53,111
+//start_point: iz_int,18,26:iz_int01,18,26:iz_int02,18,26:iz_int03,18,26:iz_int04,18,26
+//start_point_pre: new_1-1,53,111:new_2-1,53,111:new_3-1,53,111:new_4-1,53,111:new_5-1,53,111
+//start_point_doram: lasa_fild01,48,297
+//
+start_point: prt_fild08,170,368
+start_point_pre: prt_fild08,170,368
 start_point_doram: lasa_fild01,48,297
 
 // Starting items for new characters
@@ -125,7 +129,7 @@ start_items: 1201,1,2:2301,1,16
 start_items_doram: 1681,1,2:2301,1,16
 
 // Starting zeny for new characters
-start_zeny: 0
+start_zeny: 100000
 
 // Size for the fame-lists
 fame_list_alchemist: 10
@@ -168,7 +172,7 @@ char_del_level: 0
 // Amount of time in seconds by which the character deletion is delayed.
 // Default: 86400 (24 hours)
 // NOTE: Requires client 2010-08-03aragexeRE or newer.
-char_del_delay: 86400
+char_del_delay: 3600
 
 // Restrict character deletion by email address or birthdate.
 // This restricts players from changing the langtype and deleting characters.
