update configuration changes

--- a/conf/battle/drops.conf
+++ b/conf/battle/drops.conf
@@ -8,7 +8,7 @@
 //--------------------------------------------------------------
 
 // If an item is dropped, does it go straight into the user's inventory? (Note 1)
-item_auto_get: yes
+item_auto_get: no
 
 // How long does it take for an item to disappear from the floor after it is dropped? (in milliseconds)
 flooritem_lifetime: 60000
@@ -66,11 +66,11 @@ item_drop_equip_min: 1
 item_drop_equip_max: 40000
 
 // The rate at which cards are dropped
-item_rate_card: 10000
-item_rate_card_boss: 10000
-item_rate_card_mvp: 10000
+item_rate_card: 50000
+item_rate_card_boss: 50000
+item_rate_card_mvp: 50000
 item_drop_card_min: 1
-item_drop_card_max: 40000
+item_drop_card_max: 100000
 
 // The rate adjustment for the MVP items that the MVP gets directly in their inventory
 // Mode: 0 - official order, 1 - random order, 2 - all items
