--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -86,7 +86,15 @@ groups: (
 	level: 0
 	inherit: ( /*empty list*/ )
 	commands: {
+		commands: true
+		charcommands: true
+		help: true
+		rates: true
 		changedress: true
+		autoloot: true
+		alootid: true
+		autoloottype: true
+		autotrade: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
